# wl-ambilight

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
arduino/: arduino.ino  led_layout.hpp
src/: service.cpp
wayland/: capture.cpp  capture.hpp
